--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,6 @@ pycparser==2.20
 Pygments==2.7.0
 python-dateutil==2.8.1
 python-telegram-bot==12.8
-pytorch-pretrained-bert==0.6.2
 pytz==2020.1
 PyYAML==5.3.1
 regex==2020.7.14
@@ -56,5 +55,5 @@ traitlets==4.3.3
 urllib3==1.25.10
 wcwidth==0.2.5
 deeppavlov
-sentence-transformers==0.3.7.1
-
+sentence-transformers==0.3.7
+transformers==3.3.1
