--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pycparser==2.20
 Pygments==2.7.0
 python-dateutil==2.8.1
 python-telegram-bot==12.8
+pytorch-pretrained-bert==0.6.2
 pytz==2020.1
 PyYAML==5.3.1
 regex==2020.7.14
