--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ torch==1.6.0
 tornado==6.0.4
 tqdm==4.49.0
 traitlets==4.3.3
-urllib3==1.25.10
+urllib3==1.25.10g
 wcwidth==0.2.5
 deeppavlov
 sentence-transformers==0.3.7
