--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ requests==2.24.0
 s3transfer==0.3.3
 scikit-learn==0.23.2
 scipy==1.5.2
-sentencepiece==0.1.92
+sentencepiece
 six==1.15.0
 sklearn==0.0
 smart-open==2.1.1
